archive/k8s/golden-path-validation-api/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: golden-path-validation-api

spec:
  type: NodePort

  selector:
    app: golden-path-validation-api

  ports:
    - port: 80
      targetPort: 9090
      nodePort: 30090
